photo overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -398,6 +398,13 @@ footer a {
     text-decoration: underline;
 }
 
+
+@media only screen and (max-width: 1310px) {
+    .profile-pic img {
+        height: 340px;
+    }
+}
+
 /* TABLET */
 @media only screen and (max-width: 1150px) {
     section.tools {
